--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=<key>"></script>
   </head>
   <body>
+    <!-- Inside here is the entire react app  -->
     <div id="root"></div>
   </body>
 </html>
